# nrf-manaus

./: .gitignore  nRF_Connect_Programmer_1744380566883.hex
basic/gnss_module/: CMakeLists.txt  prj.conf
basic/gnss_nmea/: prj.conf  (+1 more)
basic/gnss_ubx/: CMakeLists.txt  prj.conf
basic/gnss_ubx/src/: main.c
ble_sensors/concentrator/: CMakeLists.txt  Kconfig  prj.conf
ble_sensors/concentrator/src/: main.c
ble_sensors/concentrator/src/modules/accept_list_service/: CMakeLists.txt  Kconfig.accept_list_service  accept_list_service.c  accept_list_service.h
ble_sensors/concentrator/src/modules/concentrator_periph/: CMakeLists.txt  Kconfig.concentrator_periph  concentrator_periph.c  concentrator_periph.h
ble_sensors/concentrator/src/modules/sensor_scanner/: CMakeLists.txt  Kconfig.sensor_scanner  sensor_scanner.c  sensor_scanner.h
ble_sensors/concentrator/src/modules/worker_shadow_service/: CMakeLists.txt  Kconfig.worker_shadow_service  worker_shadow_service.c  worker_shadow_service.h
ble_sensors/gateway/: CMakeLists.txt  Kconfig  prj.conf
ble_sensors/gateway/boards/: nrf9160dk_nrf9160_ns.conf  nrf9160dk_nrf9160_ns.overlay
ble_sensors/gateway/src/: main.c
ble_sensors/gateway/src/modules/bt_simple_service_client/: CMakeLists.txt  Kconfig.bt_simple_service_client  bt_simple_service_client.c  bt_simple_service_client.h
ble_sensors/gateway/src/modules/gateway_ble/: CMakeLists.txt  Kconfig.gateway_ble  gateway_ble.c  gateway_ble.h
ble_sensors/gateway/src/modules/gateway_lte/: CMakeLists.txt  Kconfig.gateway_lte  gateway_lte.c  gateway_lte.h
ble_sensors/sensor_gnss_adv/: CMakeLists.txt  Kconfig  VERSION  prj.conf
ble_sensors/sensor_gnss_adv/boards/: nrf52840dk_nrf52840.overlay
ble_sensors/sensor_gnss_adv/src/: main.c
ble_sensors/sensor_gnss_adv/src/modules/parser_gnss/: CMakeLists.txt  Kconfig.parser_gnss  parser_gnss.c  parser_gnss.h
ppk/: ppk2-sensor_ble_adv_no_serial.ppk2  ppk2-sensor_ble_adv_no_serial_nosd.ppk2  ppk2-sensor_ble_adv_no_serial_slow.ppk2  ppk2-sensor_ble_adv_no_serial_slow_nosd.ppk2
scripts/: Readme.md  accept_list.json  ble_sensor_service.json  create_service.py  mac_filter.txt  scan_ble.py  sensor_ble_service.json  set_mac.py  shadow_client.py  worker_shadow_service.json
(+63 files in other folders)
